syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/kierquebs/simplebank.kierquebral.com/pb";

message UpdateUserRequest {
    string username  = 1;
    optional string first_name = 2;
    optional string middle_name = 3;
    optional string last_name = 4;
    optional string email = 5;
    optional string password = 6;
}

message UpdateUserResponse {
    User user = 1;
}





